force-app/main/default/objects/KlopotekContact__c/KlopotekContact__c.object-meta.xml
<CustomObject>
    <label>Klopotek Contact</label>
    <nameField>
        <displayFormat>KLPC-{0000000}</displayFormat>
        <label>Klopotek Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Klopotek Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>