force-app/main/default/objects/KlopotekContact__c/fields/DELETE_CODE__c.field-meta.xml
<CustomField>
    <fullName>DELETE_CODE__c</fullName>
    <label>DELETE_CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>