force-app/main/default/objects/KlopotekContact__c/fields/EXCLUDEFROMMAIL__c.field-meta.xml
<CustomField>
    <fullName>EXCLUDEFROMMAIL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EXCLUDEFROMMAIL</label>
    <type>Checkbox</type>
</CustomField>