force-app/main/default/objects/KlopotekContact__c/fields/FAX_CITY_PREFIX__c.field-meta.xml
<CustomField>
    <fullName>FAX_CITY_PREFIX__c</fullName>
    <label>FAX_CITY_PREFIX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>