force-app/main/default/objects/KlopotekContact__c/fields/FIRST_NAME__c.field-meta.xml
<CustomField>
    <fullName>FIRST_NAME__c</fullName>
    <label>FIRST_NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>