force-app/main/default/objects/KlopotekContact__c/fields/ID_JURISTIC_PERSON__c.field-meta.xml
<CustomField>
    <fullName>ID_JURISTIC_PERSON__c</fullName>
    <label>ID_JURISTIC_PERSON</label>
    <length>10</length>
    <type>Text</type>
</CustomField>