force-app/main/default/objects/KlopotekContact__c/fields/IS_INSTITUUT_ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>IS_INSTITUUT_ADDRESS__c</fullName>
    <label>IS_INSTITUUT_ADDRESS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>