force-app/main/default/objects/KlopotekContact__c/fields/KlopotekCountry__c.field-meta.xml
<CustomField>
    <fullName>KlopotekCountry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Klopotek Country</label>
    <referenceTo>KlopotekCountry__c</referenceTo>
    <relationshipLabel>Klopotek Contacts</relationshipLabel>
    <relationshipName>Klopotek_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>