force-app/main/default/objects/KlopotekContact__c/fields/NAME__c.field-meta.xml
<CustomField>
    <fullName>NAME__c</fullName>
    <label>NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>