force-app/main/default/objects/KlopotekContact__c/fields/NAME_ADDRESS_ADDON1__c.field-meta.xml
<CustomField>
    <fullName>NAME_ADDRESS_ADDON1__c</fullName>
    <label>NAME_ADDRESS_ADDON1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>