force-app/main/default/objects/KlopotekContact__c/fields/NAME_ADDRESS_ADDON3__c.field-meta.xml
<CustomField>
    <fullName>NAME_ADDRESS_ADDON3__c</fullName>
    <label>NAME_ADDRESS_ADDON3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>