force-app/main/default/objects/KlopotekContact__c/fields/PO_BOX_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>PO_BOX_NUMBER__c</fullName>
    <label>PO_BOX_NUMBER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>