force-app/main/default/objects/KlopotekContact__c/fields/PO_DESCR__c.field-meta.xml
<CustomField>
    <fullName>PO_DESCR__c</fullName>
    <label>PO_DESCR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>