force-app/main/default/objects/KlopotekContact__c/fields/POSTAL_CODE__c.field-meta.xml
<CustomField>
    <fullName>POSTAL_CODE__c</fullName>
    <label>POSTAL_CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>