force-app/main/default/objects/KlopotekContact__c/fields/PREFIX__c.field-meta.xml
<CustomField>
    <fullName>PREFIX__c</fullName>
    <label>PREFIX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>