force-app/main/default/objects/KlopotekContact__c/fields/SEX__c.field-meta.xml
<CustomField>
    <fullName>SEX__c</fullName>
    <label>SEX</label>
    <length>1</length>
    <type>Text</type>
</CustomField>