force-app/main/default/objects/KlopotekContact__c/fields/STREET__c.field-meta.xml
<CustomField>
    <fullName>STREET__c</fullName>
    <label>STREET</label>
    <length>255</length>
    <type>Text</type>
</CustomField>