force-app/main/default/objects/KlopotekContact__c/fields/STREET_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>STREET_NUMBER__c</fullName>
    <label>STREET_NUMBER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>