force-app/main/default/objects/KlopotekContact__c/fields/TITLE__c.field-meta.xml
<CustomField>
    <fullName>TITLE__c</fullName>
    <label>TITLE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>