force-app/main/default/objects/KlopotekContact__c/fields/TITLE_CODE__c.field-meta.xml
<CustomField>
    <fullName>TITLE_CODE__c</fullName>
    <label>TITLE_CODE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>