force-app/main/default/objects/KlopotekContact__c/fields/UDB_ID__c.field-meta.xml
<CustomField>
    <fullName>UDB_ID__c</fullName>
    <label>UDB_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>