force-app/main/default/objects/KlopotekContact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DOCNR__c</columns>
    <columns>FIRST_NAME__c</columns>
    <columns>PREFIX__c</columns>
    <columns>NAME__c</columns>
    <columns>EMAIL_COMMUNICATION_NUMBER__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>